# PollOS

./: .bochsrc  .gdb_history  .gitignore  Cargo.toml  README.md  bochslog.txt  justfile
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs
src/execute/: elf64.rs  mod.rs
src/file_system/: FAT16.md  ata.rs  fat.rs  fat16.rs  i13h.rs  io.rs  mod.rs
src/memory/: heap.rs  mod.rs  pager.rs
src/memory/allocator/: bump.rs  dummy.rs  frame.rs  linked_list.rs  mod.rs
src/syscall/: SYSCALLS.md  mod.rs
src/utils/: mod.rs
src/vga/: driver.rs  mod.rs  pixel.rs
tests/: basic_boot.rs
userspace/: printer.asm  printer.elf
userspace/folder/: subfile.txt
