[package]
name = "pollos"
version = "0.1.0"
edition = "2021"
author = ["Bjørn Pollen <bjoernpollen@gmail.com>"]

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
spin = "0.10.0"
uart_16550 = "0.3.2"
volatile = "0.2.6"
x86_64 = { version = "0.15.2", features = ["instructions"] }
pic8259 = "0.10.1"
pc-keyboard = "0.8.0"
bitflags = "2.9.1"
ata = "3.1.0"
anyhow = {version = "1.0.98", default-features = false}

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "-drive", "format=raw,file=target/x86_64-pollos/debug/bootimage-pollos.bin"
]
test-success-exit-code = 33

[dependencies.lazy_static]
version = "1.0"
features= ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "unwind"

[features]
default = []
